Bug 498236 - Baloo File Extractor Crash While running `npm process`
Summary: Baloo File Extractor Crash While running `npm process`
Status: RESOLVED FIXED
Alias: None
Product: frameworks-baloo
Classification: Frameworks and Libraries
Component: Baloo File Daemon (other bugs)
Version First Reported In: 6.9.0
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: baloo-bugs-null
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2025-01-04 02:09 UTC by Robert Devasia
Modified: 2025-02-17 17:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report: https://crash-reports.kde.org/organizations/kde/issues/7463/events/723c92bf699344b79f9ce0efed0a174a/


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Devasia 2025-01-04 02:09:40 UTC
Application: baloo_file_extractor (6.9.0)

ApplicationNotResponding [ANR]: false
Qt Version: 6.8.1
Frameworks Version: 6.9.0
Operating System: Linux 6.8.0-51-generic x86_64
Windowing System: X11
Distribution: KDE neon 6.2
DrKonqi: 6.2.5 [CoredumpBackend]

-- Information about the crash:
I am getting this crash notification while executing node scripts , in VSCode. This only happens when a node project executed, my guess is something to do with `node_modules` i guess.

The crash can be reproduced sometimes.

-- Backtrace:
Application: Baloo File Extractor (baloo_file_extractor), signal: Aborted
Content of s_kcrashErrorMessage: std::unique_ptr<char []> = {get() = <optimized out>}
Downloading separate debug info for /usr/lib/x86_64-linux-gnu/libexec/kf6/baloo_file_extractor...

warning: Can't open file anon_inode:i915.gem which was expanded to anon_inode:i915.gem during file-backed mapping note processing
[New LWP 21560]
[New LWP 21561]
[New LWP 21562]
[New LWP 21564]
[New LWP 21565]
Downloading separate debug info for /lib/x86_64-linux-gnu/libmount.so.1...
Downloading separate debug info for /lib/x86_64-linux-gnu/libglib-2.0.so.0...

warning: could not find '.gnu_debugaltlink' file for /lib/x86_64-linux-gnu/libglib-2.0.so.0
Downloading separate debug info for /lib/x86_64-linux-gnu/libglib-2.0.so.0...
Downloading separate debug info for /lib/x86_64-linux-gnu/libblkid.so.1...
Downloading separate debug info for /lib/x86_64-linux-gnu/libexpat.so.1...
Downloading separate debug info for /lib/x86_64-linux-gnu/libuuid.so.1...
Downloading separate debug info for /lib/x86_64-linux-gnu/libGLX_mesa.so.0...
Downloading separate debug info for /lib/x86_64-linux-gnu/libglapi.so.0...
Downloading separate debug info for /usr/lib/x86_64-linux-gnu/dri/iris_dri.so...
Downloading separate debug info for system-supplied DSO at 0x7fff8e55a000...
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
Core was generated by `/usr/lib/x86_64-linux-gnu/libexec/kf6/baloo_file_extractor'.
Program terminated with signal SIGABRT, Aborted.
Download failed: Invalid argument.  Continuing without source file ./nptl/./nptl/pthread_kill.c.
#0  __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:44

warning: 44	./nptl/pthread_kill.c: No such file or directory
[Current thread is 1 (Thread 0x712ef6760a80 (LWP 21560))]

Cannot QML trace cores :(
/usr/share/drkonqi/gdb/python/gdb_preamble/preamble.py:516: DeprecationWarning: datetime.datetime.utcfromtimestamp() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.fromtimestamp(timestamp, datetime.UTC).
  boot_time = datetime.utcfromtimestamp(psutil.boot_time()).strftime('%Y-%m-%dT%H:%M:%S')
Download failed: Invalid argument.  Continuing without source file ./misc/../sysdeps/unix/sysv/linux/x86_64/clone3.S.
Download failed: Invalid argument.  Continuing without source file ./nptl/./nptl/pthread_create.c.
Download failed: Invalid argument.  Continuing without source file ./nptl/./nptl/pthread_cond_wait.c.
Download failed: Invalid argument.  Continuing without source file ./nptl/./nptl/futex-internal.c.
Downloading source file /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/thread/qthread_unix.cpp...
Downloading source file /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/plugins/platforms/xcb/qxcbeventqueue.cpp...
Downloading source file /build/libxcb-yBAECf/libxcb-1.15/build/src/../../src/xcb_in.c...
Downloading source file /build/libxcb-yBAECf/libxcb-1.15/build/src/../../src/xcb_conn.c...
Download failed: Invalid argument.  Continuing without source file ./io/../sysdeps/unix/sysv/linux/poll.c.
Downloading source file /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/dbus/qdbusconnectionmanager.cpp...
Downloading source file /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/global/qflags.h...
Downloading source file /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/kernel/qeventdispatcher_glib.cpp...
Downloading source file /usr/src/kf6-baloo-6.9.0-0zneon+24.04+noble+release+build13/src/file/extractor/main.cpp...
Downloading source file /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/gui/kernel/qguiapplication.cpp...
Downloading source file /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/kernel/qtimerinfo_unix.cpp...
Downloading source file /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/kernel/qcoreapplication.cpp...
Downloading source file /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/kernel/qobject.cpp...
Downloading source file /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/kernel/qsingleshottimer.cpp...
Downloading source file /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/obj-x86_64-linux-gnu/src/corelib/Core_autogen/include/moc_qsingleshottimer_p.cpp...
Downloading source file /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/kernel/qobjectdefs_impl.h...
Downloading source file /usr/src/kf6-baloo-6.9.0-0zneon+24.04+noble+release+build13/src/file/extractor/app.cpp...
Downloading source file /usr/src/kf6-baloo-6.9.0-0zneon+24.04+noble+release+build13/src/engine/transaction.cpp...
Downloading source file /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/global/qassert.cpp...
Downloading source file /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/global/qlogging.cpp...
Download failed: Invalid argument.  Continuing without source file ./stdlib/./stdlib/abort.c.
Download failed: Invalid argument.  Continuing without source file ./signal/../sysdeps/posix/raise.c.
Download failed: Invalid argument.  Continuing without source file ./nptl/./nptl/pthread_kill.c.
/usr/share/drkonqi/gdb/python/gdb_preamble/preamble.py:533: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).
  'timestamp': datetime.utcnow().isoformat(),
[Current thread is 1 (Thread 0x712ef6760a80 (LWP 21560))]

Thread 5 (Thread 0x712eebe006c0 (LWP 21565)):
#0  0x0000712ef7e98d61 in __futex_abstimed_wait_common64 (private=0, cancel=true, abstime=0x0, op=393, expected=0, futex_word=0x64e2b370d800) at ./nptl/futex-internal.c:57
#1  __futex_abstimed_wait_common (cancel=true, private=0, abstime=0x0, clockid=0, expected=0, futex_word=0x64e2b370d800) at ./nptl/futex-internal.c:87
#2  __GI___futex_abstimed_wait_cancelable64 (futex_word=futex_word@entry=0x64e2b370d800, expected=expected@entry=0, clockid=clockid@entry=0, abstime=abstime@entry=0x0, private=private@entry=0) at ./nptl/futex-internal.c:139
#3  0x0000712ef7e9b7dd in __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x64e2b370d7a8, cond=0x64e2b370d7d8) at ./nptl/pthread_cond_wait.c:503
#4  ___pthread_cond_wait (cond=0x64e2b370d7d8, mutex=0x64e2b370d7a8) at ./nptl/pthread_cond_wait.c:627
#5  0x0000712ef0d1d7cd in ?? () from /usr/lib/x86_64-linux-gnu/dri/iris_dri.so
#6  0x0000712ef0cfcaab in ?? () from /usr/lib/x86_64-linux-gnu/dri/iris_dri.so
#7  0x0000712ef0d1d6fc in ?? () from /usr/lib/x86_64-linux-gnu/dri/iris_dri.so
#8  0x0000712ef7e9ca94 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447
#9  0x0000712ef7f29c3c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 4 (Thread 0x712ef0a006c0 (LWP 21564)):
#0  0x0000712ef7e98d61 in __futex_abstimed_wait_common64 (private=0, cancel=true, abstime=0x0, op=393, expected=0, futex_word=0x64e2b371c0c8) at ./nptl/futex-internal.c:57
#1  __futex_abstimed_wait_common (cancel=true, private=0, abstime=0x0, clockid=0, expected=0, futex_word=0x64e2b371c0c8) at ./nptl/futex-internal.c:87
#2  __GI___futex_abstimed_wait_cancelable64 (futex_word=futex_word@entry=0x64e2b371c0c8, expected=expected@entry=0, clockid=clockid@entry=0, abstime=abstime@entry=0x0, private=private@entry=0) at ./nptl/futex-internal.c:139
#3  0x0000712ef7e9b7dd in __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x64e2b371c070, cond=0x64e2b371c0a0) at ./nptl/pthread_cond_wait.c:503
#4  ___pthread_cond_wait (cond=0x64e2b371c0a0, mutex=0x64e2b371c070) at ./nptl/pthread_cond_wait.c:627
#5  0x0000712ef0d1d7cd in ?? () from /usr/lib/x86_64-linux-gnu/dri/iris_dri.so
#6  0x0000712ef0cfcaab in ?? () from /usr/lib/x86_64-linux-gnu/dri/iris_dri.so
#7  0x0000712ef0d1d6fc in ?? () from /usr/lib/x86_64-linux-gnu/dri/iris_dri.so
#8  0x0000712ef7e9ca94 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447
#9  0x0000712ef7f29c3c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 3 (Thread 0x712ef36006c0 (LWP 21562)):
#0  0x0000712ef7f1b4cd in __GI___poll (fds=fds@entry=0x712ef35ff9c8, nfds=nfds@entry=1, timeout=timeout@entry=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x0000712ef70178ca in poll (__timeout=-1, __nfds=1, __fds=0x712ef35ff9c8) at /usr/include/x86_64-linux-gnu/bits/poll2.h:39
#2  _xcb_conn_wait (c=c@entry=0x64e2b35f9580, vector=vector@entry=0x0, count=count@entry=0x0, cond=<optimized out>) at ../../src/xcb_conn.c:508
#3  0x0000712ef701928c in _xcb_conn_wait (count=0x0, vector=0x0, cond=0x64e2b35f95c0, c=0x64e2b35f9580) at ../../src/xcb_conn.c:474
#4  xcb_wait_for_event (c=0x64e2b35f9580) at ../../src/xcb_in.c:703
#5  0x0000712ef49167c6 in QXcbEventQueue::run (this=0x64e2b35f6720) at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/plugins/platforms/xcb/qxcbeventqueue.cpp:192
#6  0x0000712ef8986dfe in operator() (__closure=<optimized out>) at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/thread/qthread_unix.cpp:354
#7  (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/thread/qthread_unix.cpp:290
#8  QThreadPrivate::start (arg=0x64e2b35f6720) at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/thread/qthread_unix.cpp:318
#9  0x0000712ef7e9ca94 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447
#10 0x0000712ef7f29c3c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 2 (Thread 0x712ef40006c0 (LWP 21561)):
#0  0x0000712ef7f1b4cd in __GI___poll (fds=0x64e2b3666e70, nfds=5, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x0000712ef7c3666e in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x0000712ef7bd6a53 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x0000712ef88702cf in QEventDispatcherGlib::processEvents (this=0x712eec000ba0, flags=...) at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/kernel/qeventdispatcher_glib.cpp:399
#4  0x0000712ef8ac1aeb in QEventLoop::exec (this=0x712ef3fffa80, flags=...) at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/global/qflags.h:34
#5  0x0000712ef89c2027 in QThread::exec (this=this@entry=0x712ef81ff0e0 <QGlobalStatic<QtGlobalStatic::Holder<(anonymous namespace)::Q_QGS__q_manager> >::instance()::holder>) at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/global/qflags.h:74
#6  0x0000712ef81e19dd in QDBusConnectionManager::run (this=0x712ef81ff0e0 <QGlobalStatic<QtGlobalStatic::Holder<(anonymous namespace)::Q_QGS__q_manager> >::instance()::holder>) at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/dbus/qdbusconnectionmanager.cpp:144
#7  0x0000712ef8986dfe in operator() (__closure=<optimized out>) at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/thread/qthread_unix.cpp:354
#8  (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/thread/qthread_unix.cpp:290
#9  QThreadPrivate::start (arg=0x712ef81ff0e0 <QGlobalStatic<QtGlobalStatic::Holder<(anonymous namespace)::Q_QGS__q_manager> >::instance()::holder>) at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/thread/qthread_unix.cpp:318
#10 0x0000712ef7e9ca94 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447
#11 0x0000712ef7f29c3c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 1 (Thread 0x712ef6760a80 (LWP 21560)):
[KCrash Handler]
#6  __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:44
#7  __pthread_kill_internal (signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:78
#8  __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ./nptl/pthread_kill.c:89
#9  0x0000712ef7e4526e in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
#10 0x0000712ef7e288ff in __GI_abort () at ./stdlib/abort.c:79
#11 0x0000712ef8b0e0be in qAbort () at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/global/qassert.cpp:49
#12 qt_message_fatal<QString&> (message=..., context=...) at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/global/qlogging.cpp:2116
#13 qt_message(QtMsgType, const QMessageLogContext &, const char *, typedef __va_list_tag __va_list_tag *) (msgType=msgType@entry=QtFatalMsg, context=..., msg=msg@entry=0x712ef88424a8 "ASSERT: \"%s\" in file %s, line %d", ap=ap@entry=0x7fff8e52fd68) at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/global/qlogging.cpp:382
#14 0x0000712ef8b0ef9b in QMessageLogger::fatal (this=this@entry=0x7fff8e52ffa8, msg=msg@entry=0x712ef88424a8 "ASSERT: \"%s\" in file %s, line %d") at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/global/qlogging.cpp:884
#15 0x0000712ef8b0f012 in qt_assert (assertion=assertion@entry=0x712ef970bdb7 "id > 0", file=file@entry=0x712ef970bd72 "./src/engine/transaction.cpp", line=line@entry=83) at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/global/qassert.cpp:105
#16 0x0000712ef96e44c6 in Baloo::Transaction::hasDocument (this=<optimized out>, id=<optimized out>) at /usr/src/kf6-baloo-6.9.0-0zneon+24.04+noble+release+build13/src/engine/transaction.cpp:81
#17 Baloo::Transaction::hasDocument (this=this@entry=0x712eec015c10, id=<optimized out>) at /usr/src/kf6-baloo-6.9.0-0zneon+24.04+noble+release+build13/src/engine/transaction.cpp:81
#18 0x000064e2855c98b3 in Baloo::App::index (this=this@entry=0x7fff8e530cc0, tr=0x712eec015c10, url=..., id=id@entry=55733466990534190) at /usr/src/kf6-baloo-6.9.0-0zneon+24.04+noble+release+build13/src/file/extractor/app.cpp:187
#19 0x000064e2855ca84d in Baloo::App::processNextFile (this=0x7fff8e530cc0) at /usr/include/c++/13/bits/unique_ptr.h:199
#20 0x0000712ef8a7ada9 in QtPrivate::QSlotObjectBase::call (a=<optimized out>, r=<optimized out>, this=<optimized out>, this=<optimized out>, r=<optimized out>, a=<optimized out>) at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/kernel/qobjectdefs_impl.h:486
#21 doActivate<false> (sender=0x64e2b3655ba0, signal_index=3, argv=0x7fff8e530738) at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/kernel/qobject.cpp:4124
#22 0x0000712ef8a26b96 in QSingleShotTimer::timeout (this=0x64e2b3655ba0) at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/obj-x86_64-linux-gnu/src/corelib/Core_autogen/include/moc_qsingleshottimer_p.cpp:140
#23 QSingleShotTimer::timerEvent (this=0x64e2b3655ba0) at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/kernel/qsingleshottimer.cpp:76
#24 0x0000712ef8a10876 in QObject::event (this=0x64e2b3655ba0, e=0x7fff8e5308f0) at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/kernel/qobject.cpp:1393
#25 0x0000712ef8ab5718 in QCoreApplication::notifyInternal2 (receiver=0x64e2b3655ba0, event=0x7fff8e5308f0) at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/kernel/qcoreapplication.cpp:1168
#26 0x0000712ef8985e28 in QTimerInfoList::activateTimers (this=0x64e2b36479c0) at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/kernel/qtimerinfo_unix.cpp:426
#27 0x0000712ef8872569 in timerSourceDispatch (source=<optimized out>) at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/kernel/qeventdispatcher_glib.cpp:152
#28 0x0000712ef7bd75b5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#29 0x0000712ef7c36717 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#30 0x0000712ef7bd6a53 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#31 0x0000712ef88702cf in QEventDispatcherGlib::processEvents (this=0x64e2b36383b0, flags=...) at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/kernel/qeventdispatcher_glib.cpp:399
#32 0x0000712ef8ac1aeb in QEventLoop::exec (this=0x7fff8e530bc0, flags=...) at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/global/qflags.h:34
#33 0x0000712ef8ab8c2d in QCoreApplication::exec () at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/corelib/global/qflags.h:74
#34 0x0000712ef8ed6fbd in QGuiApplication::exec () at /usr/src/qt6-base-6.8.1-0zneon+24.04+noble+release+build38/src/gui/kernel/qguiapplication.cpp:1975
#35 0x000064e2855bfce4 in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/kf6-baloo-6.9.0-0zneon+24.04+noble+release+build13/src/file/extractor/main.cpp:43

Reported using DrKonqi
Comment 1 Méven 2025-02-17 17:01:50 UTC
Git commit 8c933007c43337c34957f720d00c2771f13b93bf by Méven Car.
Committed on 17/02/2025 at 16:44.
Pushed by meven into branch 'master'.

extractor: don't try to extract when index failed

M  +6    -1    src/file/extractor/app.cpp

https://invent.kde.org/frameworks/baloo/-/commit/8c933007c43337c34957f720d00c2771f13b93bf