extractor: don't try to extract when index failed

BUG: 498236